# codeit-part3-team4

./: .gitignore  LICENSE  README.md  pyproject.toml  rfp_answer_results.json  rfp_api_answer_results.json  rfp_api_answer_results_seok.json  rfp_api_answer_results_v2.3.json  rfp_api_answer_results_v2.4.json  rfp_summaries_meta_v1.2.json  rfp_summaries_meta_v1.3.json
data/: 03_text_metadata.json  all_metadata.json  index_pages.json  processing_report.json  section_words.json  text_metadata.json
notebooks/: data_summary_integrated.ipynb  docs_api_summary.ipynb  docs_api_summary_check_ver1.ipynb  docs_api_summary_meta.ipynb  docs_api_summary_raw.ipynb  docs_api_summary_v1.ipynb  docs_api_summary_v2.ipynb  docs_hf_summary.ipynb  document.md  document_hierarchical.json  document_metadata.json  document_structured.md  edit_ALL_DATA.ipynb  exp_notebook copy.ipynb  exp_notebook.ipynb  pp_camelot.ipynb  pp_docling.ipynb  preprocess.py  preprocess_module.ipynb  preprocess_module_v4.ipynb  preprocess_template.py  preprocess_v2.py  preprocess_v3.py  preprocess_v4.py  preprocessing.ipynb  rag_eval_pipeline_full.ipynb  search_index.json  summary_integrated.ipynb  summary_integrated_C3_ver1.ipynb  summary_integrated_Mix_ver1.ipynb  summary_integrated_v1.5.ipynb  summary_integrated_ver2.ipynb  table_metadata.json  tables.md  template copy.ipynb  template.ipynb
outputs/: eval_grid_results.csv  eval_grid_results_docs_base_ver2.csv  eval_integrated.csv  eval_integrated_5.2.csv  eval_integrated_5.3.csv  eval_integrated_5.csv  eval_integrated_C3_ver1.csv  exp03_explevel.csv  exp03_ragas_explevel.csv  exp11_explevel.csv  exp12_explevel.csv  exp13_explevel.csv  exp14_explevel.csv  exp15_explevel.csv  exp16_explevel.csv  exp17_explevel.csv  exp18_explevel.csv  exp19_explevel.csv  exp20_explevel.csv  exp21_explevel.csv  exp22_explevel.csv  exp23_explevel.csv  (+1 more)
(+441 files in other folders)
